src/test/deca/context/invalid/class17.deca
class A {
}

{
	A a;
	a.no;
}